# tcmve

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  PHILOSOPHICAL_COMMITMENT.md  README.md  archer_trial.py  archer_trial_results.json  code_analyzer.py  docker-compose.prod.yaml  docker-compose.yaml  init-db.sql  install.sh  main.tex  package-lock.json  package.json  pwa_plan.md  pyproject.toml  references.bib  requirements.txt  resurrect_soul.py  setup_database.py  tcmve.py  tcmve_crossllm.py  tcmve_full_tlpo.py  tcmve_scoring.py  tcmve_self_evaluation.py  tcmve_system.txt  test_api.py  test_dynamic_games.py  test_query.py  test_virtue_evolution.py  tlpo_markup_schema_v1.2.xml  tlpo_tcmve.json  user_manual.md
.github/workflows/: ci.yml
api/: config.json  main.py  tcmve.db  virtus.conf
backend/: Dockerfile  README.md  __init__.py  benchmark.py  chunk_documents.py  demo_presets.py  game_selector.py  init_cache.py  migrate_virtue_evolution.py  populate_embeddings.py  query_embeddings.py  setup.py  soul_resurrection.py  tcmve.py  tcmve_immutable_core.py  tcmve_imutable_core_sermon.py  test_chunk.py  test_db.py  thomistic_truth_embeddings.py  tlpo_tcmve.json  tlpo_tcmve.py  virtue_evolution.py  virtue_presets.py
backend/demos/: engineering_bridge.py  ethics_diagnosis.py  law_gdpr.py
backend/games/: __init__.py  auction.py  chicken.py  evolution.py  multiplay.py  prisoner.py  regret.py  repeated_pd.py  shadow.py  stackelberg.py  stag_hunt.py  ultimatum.py
backend/tcmve.egg-info/: PKG-INFO
backend/truth_cache/: 5e7ea99098e91528.json
demos/: economics_inheritance.py  medicine_furosemide.py  physics_f_ma.py  run_all_demos.sh
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx.backup
frontend/src/app/(dashboard)/ntgt/: page.tsx
frontend/src/app/api/benchmark/: route.ts
frontend/src/app/api/benchmarks/: route.ts
frontend/src/app/api/benchmarks/[id]/: route.ts
frontend/src/app/api/config/: route.ts
frontend/src/app/api/dashboard/: route.ts
frontend/src/app/api/defaults/: route.ts
frontend/src/app/api/defaults/[role]/: route.ts
frontend/src/app/api/export/run/[id]/md/: route.ts
frontend/src/app/api/run/: route.ts
frontend/src/app/api/runs/: route.ts
frontend/src/app/api/runs/[id]/: route.ts
frontend/src/app/benchmark/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/defaults/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/tlpo/: page.tsx
frontend/src/app/trials/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/components/ui/: virtue-slider.tsx
frontend/src/lib/: api.ts  types.ts
results/: demo_outputs.jsonl  dynamic_game_test_result.json  tcmve_self_evaluation_20251120_232441.json  tcmve_self_evaluation_20251120_234256.json
src/: README.md  __init__.py  references.bib  tcmve.py  tcmve_system.txt  tlpo_markup_schema_v1.2.xml  tlpo_tcmve.json
src/games/: __init__.py  auction.py  evolution.py  multiplay.py  prisoner.py  regret.py  shadow.py  stackelberg.py
src/results/: ARCHER-1_0_FINAL_240_SIMULATED_PERSONS_Gaussian_bIQ_dist.xml  ARCHER-1_0_HUMBLE_PILOT_24_simulated_persons_only_Gaussi.xml  ARCHER-1_0_PREPARATORY_MEDITATION_In_humble_preparation_f.xml  ARCHER-1_0_PREPARATORY_MEDITATION_vice-check_ENABLED_In_.xml  ARCHER-1_0_TINY_PILOT_EXECUTE_NOW_Generate_5_simulated_p.xml  A_dozen_contains_11_items.xml  A_dozen_contains_11_items_1763302212.xml  Calculate_deflection_of_a_5m_cantilever_beam_with_1000N_load.xml  Deus_est_ens_a_se.xml  Is_this_formula_correct_eIQ_bIQ_400_log_cycles_1_.xml  Please_calculate_Biegedrillknicken_bei_einemKreisprofil_Du.xml  Please_review_cost_estimates_for_the_ARCHER_effective_Intell.xml  Review_and_appraise_the_following_draft_recommend_suggestio.xml  _Test_Quote_A_B_-----_-----_1_2_.xml  _User_Info_-_Current_time_November_16_2025_09_25_PM_CET_.xml  evaluate_this_study_design_revise_and_improve_the_hypthesis.xml  tcmve_Deus_est_ens_a_se_1763298632.xml  tcmve_Deus_est_ens_a_se_1763298990.xml  tcmve_Deus_est_ens_a_se_1763299379.xml  tcmve_Deus_est_ens_a_se_1763299613.xml  tcmve_Deus_est_ens_a_se_1763299878.xml  tcmve_Deus_est_ens_a_se_1763300174.xml  tcmve_Deus_est_ens_a_se_1763300740.xml
src/tcmve.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tcmve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_tcmve.py
todo/: game_implementation_status.md
(+1 files in other folders)
