# pyproject.toml
# TCMVE — Truth from Being
# @ECKHART_DIESTEL | DE | 2025-11-15 02:50 PM CET
# pip install tcmve

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcmve"
version = "1.0.0"
description = "Truth from Being — Zero-domain LLM verification via Thomistic metaphysics"
readme = "README.md"
authors = [
    { name = "@ECKHART_DIESTEL", email = "eckhart.diestel@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Religion :: Philosophy"
]
keywords = ["llm", "verification", "thomism", "metaphysics", "truth", "convergence", "ai-safety"]
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-groq>=0.1.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]
paper = [
    "matplotlib>=3.7",
    "pandas>=2.0"
]

[project.urls]
Homepage = "https://github.com/ediestel/tcmve"
Documentation = "https://github.com/ediestel/tcmve/blob/main/README.md"
Repository = "https://github.com/ediestel/tcmve"
Issues = "https://github.com/ediestel/tcmve/issues"
Paper = "https://github.com/ediestel/tcmve/blob/main/main.pdf"

[project.scripts]
tcmve = "tcmve:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tcmve = [
    "tcmve_system.txt",
    "ontology.txt",
    "tlpo_tcmve.json",
    "tlpo_markup_schema_v1.2.xml",
    "main.tex",
    "references.bib"
]
"tcmve.demos" = ["*.py", "*.sh"]
"tcmve.results" = ["*.xml", "*.jsonl"]
