# pyproject.toml
# TCMVE — Truth from Being
# @ECKHART_DIESTEL | DE | 2025-11-16

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcmve"
version = "1.0.0"
description = "Truth from Being — Zero-domain LLM verification via Thomistic metaphysics"
readme = "README.md"
authors = [{ name = "@ECKHART_DIESTEL", email = "eckhart.diestel@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Religion :: Philosophy"
]
keywords = ["llm", "hallucination", "drift", "verification", "thomism", "metaphysics", "truth", "convergence", "ai-safety"]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-groq>=0.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "chromadb>=1.3.0",
    "openai>=2.8.0",
    "tiktoken>=0.7.0",
    "psycopg2-binary>=2.9.0",
    "cachetools>=5.3.0",
    "redis>=5.0.0",
    "pymupdf>=1.23.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "black>=23.0", "flake8>=6.0"]
paper = ["matplotlib>=3.7", "pandas>=2.0"]

[project.urls]
Homepage = "https://github.com/ediestel/tcmve"
Documentation = "https://github.com/ediestel/tcmve/blob/main/README.md"
Repository = "https://github.com/ediestel/tcmve"
Issues = "https://github.com/ediestel/tcmve/issues"
Paper = "https://github.com/ediestel/tcmve/blob/main/main.pdf"

[project.scripts]
tcmve = "backend.tcmve:main"

# === GENERIC ROOT LAYOUT (WORKS ON ANY MACHINE) ===
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"tcmve" = [
    "tcmve.py",
    "tcmve_system.txt",
    "ontology.txt",
    "tlpo_tcmve.json",
    "tlpo_markup_schema_v1.2.xml",
    "main.pdf",
    "references.bib"
]
"tcmve.demos" = ["*.py", "*.sh"]
"tcmve.results" = ["*.xml", "*.jsonl"]